# GhostGateVPN

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  tz.txt
alembic/: env.py
alembic/versions/: 20260605_0001_initial.py  20260605_0002_user_phone_number.py
app/: main.py
app/api/: deps.py
app/api/routes/: __init__.py  admin_configs.py  admin_subscriptions.py  admin_users.py  auth.py  me.py  plans.py  subscriptions.py  vpn_configs.py
app/core/: config.py  jwt.py  security.py
app/db/: base.py  session.py
app/db/models/: __init__.py  email_token.py  plan.py  refresh_token.py  subscription.py  user.py  vpn_config.py  vpn_config_event.py
app/schemas/: auth.py  common.py  plan.py  subscription.py  user.py  vpn_config.py
app/services/: auth_service.py  awg_service.py  email_service.py  vpn_service.py
app/workers/: jobs.py  scheduler.py
awg_client/: __init__.py  client.py
tests/: test_access_contracts.py  test_app_smoke.py  test_auth_schemas.py  test_email_service.py  test_jwt.py  test_model_contracts.py  test_security.py  test_vpn_create_and_download.py
